Replace getConstructors with getConstructor